added 2 more tests

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
 
+  
     <div id="mocha"></div>
     <script>
         // the mocha test style to use - we use BDD - Behviour Driven Development
@@ -40,8 +41,8 @@
     <script src="/test/regCheck.tests.js" charset="utf-8"></script>
 
     <!-- 5 countRegNumber -->
-    <!-- <script src="./countRegNumber.js" charset="utf-8"></script> -->
-    <!-- <script src="./test/countRegNumber.tests.js" charset="utf-8"></script> -->
+    <script src="./countRegNumber.js" charset="utf-8"></script>
+    <script src="./test/countRegNumber.tests.js" charset="utf-8"></script>
 
     <!-- 6 yearsAgo -->
     <!-- <script src="yearsAgo.js" charset="utf-8"></script> -->
