"need to still find values of "findItemsOver20" then I will be done"

--- a/index.html
+++ b/index.html
@@ -49,18 +49,16 @@
     <script src="/test/yearsAgo.tests.js" charset="utf-8"></script>
     
     <!-- 7 totalPhoneBill -->
-    <!--  -->
-    <!-- <cript src="totalPhoneBill.js" charset="utf-8"></script> -->
-    <!-- <script src="/test/totalPhoneBill.tests.js" charset="utf-8"></script> --> -->
-
+    <script src="totalPhoneBill.js" charset="utf-8"></script>
+    <script src="/test/totalPhoneBill.tests.js" charset="utf-8"></script>
 
     <!-- 8 transportFee -->
     <script src="transportFee.js" charset="utf-8"></script>
     <script src="/test/transportFee.tests.js" charset="utf-8"></script>
 
     <!-- 9 mostProfitableDepartment -->
-    <!-- <script src="mostProfitableDepartment.js" charset="utf-8"></script> -->
-    <!-- <script src="/test/mostProfitableDepartment.tests.js" charset="utf-8"></script> -->
+    <script src="mostProfitableDepartment.js" charset="utf-8"></script>
+    <script src="/test/mostProfitableDepartment.tests.js" charset="utf-8"></script>
 
     <!-- 10 isWeekday -->
     <script src="isWeekday.js" charset="utf-8"></script>
