not all my test were commited the last time

--- a/index.html
+++ b/index.html
@@ -38,47 +38,47 @@
 
     <!-- 4 regCheck -->
     <script src="regCheck.js" charset="utf-8"></script>
-    <script src="/test/regCheck.tests.js" charset="utf-8"></script>
+    <script src="test/regCheck.tests.js" charset="utf-8"></script>
 
     <!-- 5 countRegNumber -->
-    <script src="./countRegNumber.js" charset="utf-8"></script>
-    <script src="./test/countRegNumber.tests.js" charset="utf-8"></script>
+    <script src="countRegNumber.js" charset="utf-8"></script>
+    <script src="test/countRegNumber.tests.js" charset="utf-8"></script>
 
     <!-- 6 yearsAgo -->
     <script src="yearsAgo.js" charset="utf-8"></script>
-    <script src="/test/yearsAgo.tests.js" charset="utf-8"></script>
+    <script src="test/yearsAgo.tests.js" charset="utf-8"></script>
     
     <!-- 7 totalPhoneBill -->
     <script src="totalPhoneBill.js" charset="utf-8"></script>
-    <script src="/test/totalPhoneBill.tests.js" charset="utf-8"></script>
+    <script src="test/totalPhoneBill.tests.js" charset="utf-8"></script>
 
     <!-- 8 transportFee -->
     <script src="transportFee.js" charset="utf-8"></script>
-    <script src="/test/transportFee.tests.js" charset="utf-8"></script>
+    <script src="test/transportFee.tests.js" charset="utf-8"></script>
 
     <!-- 9 mostProfitableDepartment -->
     <script src="mostProfitableDepartment.js" charset="utf-8"></script>
-    <script src="/test/mostProfitableDepartment.tests.js" charset="utf-8"></script>
+    <script src="test/mostProfitableDepartment.tests.js" charset="utf-8"></script>
 
     <!-- 10 isWeekday -->
     <script src="isWeekday.js" charset="utf-8"></script>
-    <script src="/test/isWeekday.tests.js" charset="utf-8"></script>
+    <script src="test/isWeekday.tests.js" charset="utf-8"></script>
 
     <!-- 11 isFromBellvile -->
     <script src="isFromBellville.js" charset="utf-8"></script>
-    <script src="/test/isFromBellville.tests.js" charset="utf-8"></script>
+    <script src="test/isFromBellville.tests.js" charset="utf-8"></script>
 
     <!-- 12 fromWhere -->
     <script src="fromWhere.js" charset="utf-8"></script>
-    <script src="/test/fromWhere.tests.js" charset="utf-8"></script>
+    <script src="test/fromWhere.tests.js" charset="utf-8"></script>
 
     <!-- 13 findItemsOver -->
     <script src="findItemsOver.js" charset="utf-8"></script>
-    <script src="/test/findItemsOver.tests.js" charset="utf-8"></script>
+    <script src="test/findItemsOver.tests.js" charset="utf-8"></script>
 
     <!-- 14 findItemsOver20 -->
     <script src="findItemsOver20.js" charset="utf-8"></script>
-    <script src="/test/findItemsOver20.tests.js" charset="utf-8"></script>
+    <script src="test/findItemsOver20.tests.js" charset="utf-8"></script>
 
 
     <script>
